# stm32f469ni-rtic-example

./: Cargo.toml  README.md  flash.sh  memory.x
.cargo/: config.toml
src/: main.rs  state.rs
